--- a/public/404.html
+++ b/public/404.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Beatbrothers have a 404 error</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .background-error-page {
+    background: #7618FD;
+    background: linear-gradient(228deg, #140c1e, #2d1d4d);
+    background-attachment: fixed;
+  }
+
+  .navbar {
+    justify-content: space-between;
+    background-image: linear-gradient(to bottom, #000000c7 0%, #000000ed 100%);
+    box-shadow: rgb(0 0 0 / 10%) 0px 4px 6px -1px, rgb(0 0 0 / 6%) 0px 2px 4px -1px;
+    margin-left: -20px;
+    padding: 0;
+  }
+
+  .container-fluid {
+    display: flex;
+    flex-wrap: inherit;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .navbar-brand {
+    max-width: 240px;
+  }
+
+  .error-container {
+    margin-top: 100px;
+  }
+
+  .error-container h1 {
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+  }
+
+  .error-container p {
+    color: white;
+    font-family: sans-serif;
+    margin: 0 40px;
+    text-align: center;
+  }
+
+  .error-container a {
+    text-decoration: none;
+  }
+
+  .error-container button {
+    border-radius: 30px;
+    padding: 6px 26px;
+    border: 1px solid #ffffff70;
+    font-size: 1.6em;
+    background: #ffffff;
+    color: white;
+    display: block;
+    margin: 34px auto;
+    background-image: linear-gradient(200deg, #7429b1, #504ec3);
+  }
+
+  .error-container img {
+    max-width: 260px;
+    display: block;
+    margin: auto;
+    padding: 0 5% 0 3%;
+  }
+
+  /* .rails-default-error-page {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -35,9 +100,9 @@
     font-size: 100%;
     color: #730E15;
     line-height: 1.5em;
-  }
+  } */
 
-  .rails-default-error-page div.dialog > p {
+  /* .rails-default-error-page div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -50,18 +115,32 @@
     border-top-color: #DADADA;
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+  } */
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
+<body class="background-error-page">
+  <div class="navbar">
+    <div class="container-fluid">
+      <a href="/">
+        <img src="/logo_sans_fond.png" alt="" class="navbar-brand">
+      </a>
+    </div>
+  </div>
+  <div class="error-container">
+    <h1>Lost your way Bro ?</h1>
+    <img src="/error_404.png" alt="" class="error-img">
+    <p>No problem ! You can still looking for your soulmate</p>
+    <a href="/">
+      <button class="error-btn">Find a musician</button>
+    </a>
+  </div>
+  <!-- <div class="dialog">
     <div>
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
-  </div>
+  </div> -->
 </body>
 </html>
