--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Beatbrothers have a 500 error</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+  .background-error-page {
+    background: #7618FD;
+    background: linear-gradient(228deg, #140c1e, #2d1d4d);
+    background-attachment: fixed;
+  }
+
+  .navbar {
+    justify-content: space-between;
+    background-image: linear-gradient(to bottom, #000000c7 0%, #000000ed 100%);
+    box-shadow: rgb(0 0 0 / 10%) 0px 4px 6px -1px, rgb(0 0 0 / 6%) 0px 2px 4px -1px;
+    margin-left: -20px;
+    padding: 0;
+  }
+
+  .container-fluid {
+    display: flex;
+    flex-wrap: inherit;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .navbar-brand {
+    max-width: 240px;
+  }
+
+  .error-container {
+    margin-top: 100px;
+  }
+
+  .error-container h1 {
+    color: white;
     text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
+    font-family: sans-serif;
   }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
+  .error-container p {
+    color: white;
+    font-family: sans-serif;
+    margin: 0 40px;
+    text-align: center;
   }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .error-container a {
+    text-decoration: none;
   }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+  .error-container button {
+    border-radius: 30px;
+    padding: 6px 26px;
+    border: 1px solid #ffffff70;
+    font-size: 1.6em;
+    background: #ffffff;
+    color: white;
+    display: block;
+    margin: 34px auto;
+    background-image: linear-gradient(200deg, #7429b1, #504ec3);
   }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .error-container img {
+    max-width: 260px;
+    display: block;
+    margin: auto;
+    padding: 0 5% 0 5%;
   }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+<body class="background-error-page">
+  <div class="navbar">
+    <div class="container-fluid">
+      <a href="/">
+        <img src="/logo_sans_fond.png" alt="" class="navbar-brand">
+      </a>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+  </div>
+  <div class="error-container">
+    <h1>Lost your way Bro ?</h1>
+    <img src="/error_500.png" alt="" class="error-img">
+    <p>No problem ! You can still looking for your soulmate</p>
+    <a href="/">
+      <button class="error-btn">Find a musician</button>
+    </a>
   </div>
 </body>
 </html>
